include/oox/drawingml/shape.hxx
@@ -178,7 +178,8 @@ public:
     const com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue> &
                         getDiagramDoms() { return maDiagramDoms; }
     void                setDiagramDoms(const com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue>& rDiagramDoms) { maDiagramDoms = rDiagramDoms; }
-
+    com::sun::star::uno::Sequence< com::sun::star::uno::Sequence< com::sun::star::uno::Any > >resolveRelationshipsOfType(
+                                                                          core::XmlFilterBase& rFilter, OUString sFragment, OUString sType );
 protected:
 
     ::com::sun::star::uno::Reference< ::com::sun::star::drawing::XShape >
